---
source: crates/sith_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    [
        FunctionDef(
            FunctionDefStmt {
                range: 1..49,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "args_to_tuple",
                    range: 5..18,
                },
                type_params: None,
                parameters: Parameters {
                    range: 18..30,
                    posonlyargs: [],
                    args: [],
                    vararg: Some(
                        Parameter {
                            range: 20..29,
                            name: Identifier {
                                id: "args",
                                range: 20..24,
                            },
                            annotation: Some(
                                Starred(
                                    StarredExpr {
                                        range: 26..29,
                                        value: Name(
                                            NameExpr {
                                                range: 27..29,
                                                id: "Ts",
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                    kwonlyargs: [],
                    kwarg: None,
                },
                returns: Some(
                    Subscript(
                        SubscriptExpr {
                            range: 34..44,
                            value: Name(
                                NameExpr {
                                    range: 34..39,
                                    id: "Tuple",
                                    ctx: Load,
                                },
                            ),
                            slice: Starred(
                                StarredExpr {
                                    range: 40..43,
                                    value: Name(
                                        NameExpr {
                                            range: 41..43,
                                            id: "Ts",
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                ),
                body: [
                    Expr(
                        ExprStmt {
                            range: 46..49,
                            value: EllipsisLiteral(
                                EllipsisLiteralExpr {
                                    range: 46..49,
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
    [],
)
